<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_feed_row_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

  <ImageView
      android:id="@+id/video_thumbnail_imageview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:contentDescription="@string/home_feed_thumbnail_content_description"/>

  <ImageView
      android:id="@+id/profile_imageview"
      android:layout_width="40dp"
      android:layout_height="40dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/video_thumbnail_imageview"
      android:layout_marginTop="8dp"
      android:contentDescription="@string/home_feed_profile_image_content_description"/>

  <TextView
      android:id="@+id/video_name_textview"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toEndOf="@id/profile_imageview"
      app:layout_constraintTop_toTopOf="@id/profile_imageview"
      app:layout_constraintEnd_toEndOf="parent"
      android:maxLines="1"
      android:ellipsize="end"
      android:textStyle="bold"
      android:layout_marginStart="8dp"
      style="@style/textAppearanceListItemTitle"/>

  <TextView
      android:id="@+id/number_of_views_textview"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toEndOf="@id/profile_imageview"
      app:layout_constraintBottom_toBottomOf="@id/profile_imageview"
      android:layout_marginStart="8dp"
      style="@style/textAppearanceListItemSubtitle"/>

  <TextView
      android:id="@+id/number_of_views_title_textview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toEndOf="@id/number_of_views_textview"
      app:layout_constraintBottom_toBottomOf="@id/profile_imageview"
      android:text="@string/views"
      style="@style/textAppearanceListItemSubtitle"/>

</androidx.constraintlayout.widget.ConstraintLayout>